[package]
name = "arrays-and-strings"
version = "0.1.0"
authors = ["Seb Insua <me@sebinsua.com>"]

[[bin]]
name = "is_unique"
path = "src/is_unique.rs"

[[bin]]
name = "check_permutation"
path = "src/check_permutation.rs"

[[bin]]
name = "urlify"
path = "src/urlify.rs"

[[bin]]
name = "palindrome_permutation"
path = "src/palindrome_permutation.rs"

[[bin]]
name = "string_compression"
path = "src/string_compression.rs"

[[bin]]
name = "string_rotation"
path = "src/string_rotation.rs"
